@@ -1,3 +1,8 @@
+2008-07-28  Jens Granseuer  <jensgr@gmx.net>
+
+	* sound-theme.c: (custom_treeview_button_press_event_cb): don't
+	preview sounds for insensitive rows
+
 2008-07-28  Bastien Nocera  <hadess@hadess.net>
 
 	* sound-theme.c (setting_set_func), (fill_custom_model),
